@@ -82,11 +82,11 @@ int do_statusbar_input(bool *meta_key, bool *func_key, bool *s_or_t,
 
     /* If we got a shortcut from the current list, or a "universal"
      * statusbar prompt shortcut, set have_shortcut to TRUE. */
-    have_shortcut = (s != NULL || input == NANO_REFRESH_KEY || input ==
-	NANO_HOME_KEY || input == NANO_END_KEY || input ==
-	NANO_BACK_KEY || input == NANO_FORWARD_KEY || input ==
-	NANO_BACKSPACE_KEY || input == NANO_DELETE_KEY || input ==
-	NANO_CUT_KEY ||
+    have_shortcut = (s != NULL || input == NANO_ENTER_KEY || input ==
+	NANO_REFRESH_KEY || input == NANO_HOME_KEY || input ==
+	NANO_END_KEY || input == NANO_BACK_KEY || input ==
+	NANO_FORWARD_KEY || input == NANO_BACKSPACE_KEY || input ==
+	NANO_DELETE_KEY || input == NANO_CUT_KEY ||
 #ifndef NANO_TINY
 	input == NANO_NEXTWORD_KEY ||
 #endif
@@ -100,15 +100,12 @@ int do_statusbar_input(bool *meta_key, bool *func_key, bool *s_or_t,
     *s_or_t = have_shortcut;
 
     /* If we got a non-high-bit control key or a meta key sequence, and
-     * it's not a shortcut or toggle, ignore it.  If it's a meta key
-     * sequence, throw it out completely, so that we don't end up
-     * inserting its second character as though it were typed. */
+     * it's not a shortcut or toggle, throw it out. */
     if (*s_or_t == FALSE) {
 	if (is_ascii_cntrl_char(input) || *meta_key == TRUE) {
-	    if (*meta_key == TRUE) {
+	    if (*meta_key == TRUE)
 		*meta_key = FALSE;
-		input = ERR;
-	    }
+	    input = ERR;
 	}
     }
 
@@ -161,6 +158,8 @@ int do_statusbar_input(bool *meta_key, bool *func_key, bool *s_or_t,
 	if (have_shortcut) {
 	    switch (input) {
 		/* Handle the "universal" statusbar prompt shortcuts. */
+		case NANO_ENTER_KEY:
+		    break;
 		case NANO_REFRESH_KEY:
 		    total_statusbar_refresh(refresh_func);
 		    break;
@@ -1062,6 +1061,13 @@ int get_prompt_string(bool allow_tabs,
 		    }
 
 		    update_statusbar_line(answer, statusbar_x);
+
+		    /* This key has a shortcut list entry when it's used
+		     * to move to an older search, which means that
+		     * finished has been set to TRUE.  Set it back to
+		     * FALSE here, so that we aren't kicked out of the
+		     * statusbar prompt. */
+		    finished = FALSE;
 		}
 		break;
 #endif /* !NANO_TINY */
